--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <title>Code Maker & Breaker</title>
 </head>
 <body>
+        <div class="d-flex justify-content-left">
+                <form class="text-light bg-secondary w-50 p-3">
+                        <div class="form-group">
+                            <label for="wordInput"></label>
+                              <input type="text" class="form-control" id="toDoInput" aria-describedby="emailHelp" placeholder="">
+                              <button type="submit" id ="submitButton" class="btn btn-primary w-100">Convert To Secret</button>
+                            </div></form>
+                          
+                        </div>
+                        <p></p>
+
+                        <form class="text-light bg-secondary w-50 p-3">
+                                <div class="form-group">
+                                    <label for="wordInput"></label>
+                                      <input type="text" class="form-control" id="toDoInput" aria-describedby="emailHelp" placeholder="">
+                                      <button type="submit" id ="submitButton" class="btn btn-primary w-100">Convert To Words</button>
+                                    </div></form>
+
 <script src="main.js"></script>    
 </body>
 </html>
