--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
     <title>Code Maker & Breaker</title>
 </head>
 <body>
+        <img src="./images/top_secret.png" alt="Top Secret" > 
         <div class="d-flex justify-content-center">
-                <form class="text-light bg-secondary w-50 p-3">
+                <form class="text-light bg-none w-50 p-3">
                         <div class="form-group">
                             <label for="wordInput"></label>
                               <input type="text" class="form-control" id="startWordInput" aria-describedby="emailHelp" placeholder="">
-                              <button type="submit" id ="startCodeButton" class="btn btn-primary w-100">Convert To Secret</button>
+                              <button type="submit" id ="startCodeButton" class="btn btn-outline-danger w-100 btn-lg">Convert To Secret</button>
                             </div></form>
-                          
-                        </div>
+                            </div>
+
                         <div id="secretString" class="d-flex flex-wrap justify-content-center"></div>
-        <div class="d-flex justify-content-center">
-                        <form class="text-light bg-secondary w-50 p-3">
+        
+                        <div class="d-flex justify-content-center">
+                        <form class="text-light bg-none w-50 p-3">
                                 <div class="form-group">
                                     <label for="numberInput"></label>
                                       <input type="text" class="form-control" id="secretNumberInput" aria-describedby="emailHelp" placeholder="">
-                                      <button type="submit" id ="endCodeButton" class="btn btn-primary w-100">Convert To Words</button>
+                                      <button type="submit" id ="endCodeButton" class="btn btn-outline-danger w-100 btn-lg">Convert To Words</button>
                                     </div></form>
                             </div>
                         <div id="reverseString" class="d-flex flex-wrap justify-content-center"></div> 
